# uciproto

./: README.md  __init__.py  pyproject.toml  uciproto.py
uciproto/: __init__.py  lib.py
